--- a/Cooking_app/static/css/profile/main.css
+++ b/Cooking_app/static/css/profile/main.css
@@ -241,42 +241,42 @@
 
 #facebook{
   opacity: 0.5;
-  background-image: url('/icons/facebook.png');
+  background-image: url('/static/icons/facebook.png');
 }
 
 #facebook:hover{
   opacity: 1;
-  background-image: url('/icons/facebook-hover.png');
+  background-image: url('/static/icons/facebook-hover.png');
 }
 
 #twitter{
   opacity: 0.5;
-  background-image: url('/icons/twitter.png');
+  background-image: url('/static/icons/twitter.png');
 }
 
 #twitter:hover{
   opacity: 1;
-  background-image: url('/icons/twitter-hover.png');
+  background-image: url('/static/icons/twitter-hover.png');
 }
 
 #instagram{
   opacity: 0.5;
-  background-image: url('/icons/instagram.png');
+  background-image: url('/static/icons/instagram.png');
 }
 
 #instagram:hover{
   opacity: 1;
-  background-image: url('/icons/instagram-hover.png');
+  background-image: url('/static/icons/instagram-hover.png');
 }
 
 #pinterest{
   opacity: 0.5;
-  background-image: url('/icons/pinterest.png');
+  background-image: url('/static/icons/pinterest.png');
 }
 
 #pinterest:hover{
   opacity: 1;
-  background-image: url('/icons/pinterest-hover.png');
+  background-image: url('/static/icons/pinterest-hover.png');
 }
 
 .editing-container{
@@ -807,7 +807,7 @@ input:focus{
 
 .saved-recipe-checkbox input[type="checkbox"] + label
 {
-  background: url('/icons/saved-hover.png') no-repeat center;
+  background: url('/static/icons/saved-hover.png') no-repeat center;
   background-size: 100%;
   height: 24px;
   width: 24px;
@@ -817,7 +817,7 @@ input:focus{
 
 .saved-recipe-checkbox input[type="checkbox"]:checked + label
 {
-  background: url('/icons/saved.png') no-repeat center;
+  background: url('/static/icons/saved.png') no-repeat center;
   background-size: 100%;
   height: 24px;
   width: 24px;
