--- a/Cooking_app/templates/index.html
+++ b/Cooking_app/templates/index.html
@@ -704,7 +704,7 @@
 
 <!-- javascript Code -->
 <script>
-  {% comment %} initialize(); {% endcomment %}
+  initialize();
 
   {% comment %} 
   function initialize(){
