--- a/Cooking_app/static/css/profile/main.css
+++ b/Cooking_app/static/css/profile/main.css
@@ -48,20 +48,40 @@
   display: hidden;
 }
 
-
-#log-out-btn{
-  margin-top: 10px;
+#container-logout-follow{
   width: 100px;
   height: 17.5%;
+}
+
+#log-out-btn, #follow-btn{
+  margin-top: 10px;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+#follow-btn{
+  display: block;
+  background-color: #2196F3;
+  color: white;
+  border: none;
+  padding: 7.5px 10px;
+  border-radius: 20px;
+}
+
+#follow-btn:hover{
+  opacity: 0.8;
+}
+
+#log-out-btn{
+  display: none;
   border: 1.5px rgb(0, 157, 255) solid;
   border-radius: 20px;  
   background-color: white; 
   position: relative;
-  cursor: pointer;
 }
 
 #log-out-btn:hover{
-  background-color: rgb(242, 242, 242);
   padding-right: 10px;
 }
 
@@ -241,42 +261,42 @@
 
 #facebook{
   opacity: 0.5;
-  background-image: url('/icons/facebook.png');
+  background-image: url('../../icons/facebook.png');
 }
 
 #facebook:hover{
   opacity: 1;
-  background-image: url('/icons/facebook-hover.png');
+  background-image: url('../../icons/facebook-hover.png');
 }
 
 #twitter{
   opacity: 0.5;
-  background-image: url('/icons/twitter.png');
+  background-image: url('../../icons/twitter.png');
 }
 
 #twitter:hover{
   opacity: 1;
-  background-image: url('/icons/twitter-hover.png');
+  background-image: url('../../icons/twitter-hover.png');
 }
 
 #instagram{
   opacity: 0.5;
-  background-image: url('/icons/instagram.png');
+  background-image: url('../../icons/instagram.png');
 }
 
 #instagram:hover{
   opacity: 1;
-  background-image: url('/icons/instagram-hover.png');
+  background-image: url('../../icons/instagram-hover.png');
 }
 
 #pinterest{
   opacity: 0.5;
-  background-image: url('/icons/pinterest.png');
+  background-image: url('../../icons/pinterest.png');
 }
 
 #pinterest:hover{
   opacity: 1;
-  background-image: url('/icons/pinterest-hover.png');
+  background-image: url('../../icons/pinterest-hover.png');
 }
 
 .editing-container{
@@ -391,6 +411,12 @@
   position: absolute;
   left: 15px;
   top: 10px;
+}
+
+#my-post-span{
+  font-size: 18px;
+  font-family: Montserrat;
+  font-weight: 500;
 }
 
 #saved-recipes-container, #my-post-container{
@@ -572,7 +598,7 @@ input:focus{
 }
 
 .send-code-container{
-  margin-top: 10px;
+  margin-top:10px;
   display: block;
   position: relative;
   padding-left: 35px;
@@ -751,6 +777,7 @@ input:focus{
 .img-recipe-small-preview{
   min-width: 100px;
   max-width: 100px;
+  width: 100px;
   min-height: 100px;
   max-height: 100px;
 }
@@ -807,7 +834,7 @@ input:focus{
 
 .saved-recipe-checkbox input[type="checkbox"] + label
 {
-  background: url('/icons/saved-hover.png') no-repeat center;
+  background: url('../../icons/saved-hover.png') no-repeat center;
   background-size: 100%;
   height: 24px;
   width: 24px;
@@ -817,7 +844,7 @@ input:focus{
 
 .saved-recipe-checkbox input[type="checkbox"]:checked + label
 {
-  background: url('/icons/saved.png') no-repeat center;
+  background: url('../../icons/saved.png') no-repeat center;
   background-size: 100%;
   height: 24px;
   width: 24px;
@@ -857,3 +884,5 @@ input:focus{
   height: 20px;
   cursor: pointer;
 }
+
+
