--- a/Cooking_app/templates/search.html
+++ b/Cooking_app/templates/search.html
@@ -48,32 +48,34 @@
 
     <div id = "right-header">
       {% if not request.user.is_authenticated %}
-      
-      <div id = "container-10">
-        <button id = "JoinUsButton2">
-          <span>
-            Log In / Sign Up
-          </span>
-        </button>
-      </div>
-      {% else %}
-      
-      <div id = "container-11">
-        <div class = "dropdown">
-          <span class = "username-header" onclick="displayDropdown()">{{request.user.username}}</span>
-          <img class = "profile-header" onclick="displayDropdown()" src="{{request.user.userinfo.avatar.url}}" alt="">
-          <div id="my-dropdown" class="dropdown-content">
-            <a href="{% url 'profile' request.user.username%}">Profile</a>
-            <a href="{% url 'post_a_recipe' %}">Post recipe</a>
-            <a href="{% url 'login' %}" 
-                onclick="return logout();"
-            >
-                  Log out
-              </a>
+          <div style=" visibility:  visible; " 
+          id = "container-10">
+            <button id = "JoinUsButton2" onclick="login()">
+              <span>
+                Log In / Sign Up
+              </span>
+            </button>
           </div>
-        </div>
-      </div>
-      {% endif %}
+          {% else %}
+          <div style=" visibility:  visible;" id = "container-11">
+            
+            <div class = "dropdown">
+              <span class = "username-header" onclick="displayDropdown()"> {{user.username}}</span>
+              <img class = "profile-header" onclick="displayDropdown()" src="{{user.userinfo.avatar.url}}" alt="">
+              <div id="my-dropdown" class="dropdown-content">
+                <a href="{% url 'profile' user.username %}">Profile</a>
+                <a href="{% url 'post_a_recipe' %}">Post recipe</a>
+                <a href="{% url 'logout' %}" 
+                    onclick="return logout();"
+                >
+                    Log out
+                </a>
+
+              </div>
+            </div>
+            
+          </div>
+          {% endif %}
     </div>
 
   </header> 
@@ -94,19 +96,19 @@
       <div id = "container-0">
         
         {% if not request.user.is_authenticated %}
-        <div id = "container-00">
-          <button id = "JoinUsButton">
+        <div style="visibility:   visible ;" id = "container-00">
+          <button type="button" id = "JoinUsButton" onclick="login()">
             <span>
               Join Us
             </span>
-        </button>
+          </button>
         </div>
         {% else %}
-        
-        <div id = "container-01">
-          <a href="{% url 'profile' request.user.username %}">
-            <img src="{{request.user.userinfo.avatar.url}}" alt="">
-            <p>{{request.user.username}}</p>
+        <div style="visibility:  visible ;" id = "container-01">
+          
+          <a href="{% url 'profile' request.user.username  %}">
+            <img src="{{user.userinfo.avatar.url}}" alt="">
+            <p>{{user.username}}</p>
           </a>
         </div>
         {% endif %}
@@ -529,6 +531,9 @@
     function logout(){
       localStorage.setItem('login', 'no');
       return true;
+    }
+  function login(){
+    window.location.href = "{% url 'login' %}";
   }
   </script>
 
