--- a/Cooking_app/static/css/common/header.css
+++ b/Cooking_app/static/css/common/header.css
@@ -7,7 +7,7 @@
 }
 
 #middle-header{
-  flex: 70%;
+  flex: 65%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -16,7 +16,7 @@
 }
 
 #right-header{
-  flex: 10%;
+  flex: 15%;
 
   position: relative;
   display: flex;
@@ -80,12 +80,7 @@
 }
 
 /* Right */
-#container-11{
-  visibility: visible;
-} 
-#container-10{
-  visibility: hidden;
-}
+
 
 #container-11, #container-10{
   height: 100%;
@@ -93,6 +88,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  visibility: hidden;
 }
 
 .dropdown{
@@ -144,7 +140,7 @@
   border-radius: 20px;
   background-color:white;
   cursor: pointer;
-
+  min-width: 130px;
 }
 
 #JoinUsButton2 span{
@@ -153,7 +149,6 @@
   transition: 0.5s;
   font-size: 13px;
   font-weight: 500;
-
 }
 
 #JoinUsButton2 span:after{
@@ -161,22 +156,22 @@
   position: absolute;
   opacity: 0;
   top: 0;
-  right: -10px;
-  transition: 0.5s;
+  right: -15px;
+  transition: 0.3s;
 }
 
 #JoinUsButton2:hover span{
-  padding-right: 10px;
+  padding-right: 12.5px;
   color: white;
-
 }
+
 #JoinUsButton2:hover{
   background-color: black;
 }
 
 #JoinUsButton2:hover span:after{
   opacity: 1;
-  right: -5px;
+  right: 0;
 }
 
 #JoinUsButton2:active{
