--- a/Cooking_app/templates/post_a_recipe.html
+++ b/Cooking_app/templates/post_a_recipe.html
@@ -61,32 +61,37 @@
       </div>
 
       <div id="right-header">
-        <div id="container-10">
-          <button id="JoinUsButton2">
-            <span> Log In / Sign Up </span>
-          </button>
-        </div>
-        <div id="container-11">
-          <div class="dropdown">
-            <span class="username-header" onclick="displayDropdown()"
-              >{{user_info.user.username}}</span
-            >
-            <img
-              class="profile-header"
-              onclick="displayDropdown()"
-              src="{{user_info.avatar.url}}"
-              alt=""
-            />
-            <div id="my-dropdown" class="dropdown-content">
-              <a href="{% url 'profile' request.user.username %}">Profile</a>
-              <a href="{% url 'profile' request.user.username %}">Saved Recipes</a>
-              <a href="{% url 'profile' request.user.username %}">Settings</a>
-              <a href="{% url 'login' %}" onclick="return logout();">
-                Log out
-              </a>
-            </div>
+        
+        {% if not request.user.is_authenticated %}
+          <div style=" visibility:  visible; " 
+          id = "container-10">
+            <button id = "JoinUsButton2" onclick="login()">
+              <span>
+                Log In / Sign Up
+              </span>
+            </button>
           </div>
-        </div>
+          {% else %}
+          <div style=" visibility:  visible;" id = "container-11">
+            
+            <div class = "dropdown">
+              <span class = "username-header" onclick="displayDropdown()"> {{user.username}}</span>
+              <img class = "profile-header" onclick="displayDropdown()" src="{{user.userinfo.avatar.url}}" alt="">
+              <div id="my-dropdown" class="dropdown-content">
+                <a href="{% url 'profile' user.username %}">Profile</a>
+                <a href="{% url 'post_a_recipe' %}">Post recipe</a>
+                <a href="{% url 'logout' %}" 
+                    onclick="return logout();"
+                >
+                    Log out
+                </a>
+
+              </div>
+            </div>
+            
+          </div>
+          {% endif %}
+          
       </div>
     </header>
 
@@ -105,17 +110,25 @@
       <!-- Sidebar main  -->
       <div class="sidebar-main">
         <div id="container-0">
-          <div id="container-00">
-            <button id="JoinUsButton">
-              <span> Join Us </span>
+
+          {% if not request.user.is_authenticated %}
+          <div style="visibility:   visible ;" id = "container-00">
+            <button type="button" id = "JoinUsButton" onclick="login()">
+              <span>
+                Join Us
+              </span>
             </button>
           </div>
-          <div id="container-01">
-            <a href="#">
-              <img src="{{user_info.avatar.url}}" alt="" />
-              <p>{{user_info.user.username}}</p>
+          {% else %}
+          <div style="visibility:  visible ;" id = "container-01">
+            
+            <a href="{% url 'profile' request.user.username  %}">
+              <img src="{{user.userinfo.avatar.url}}" alt="">
+              <p>{{user.username}}</p>
             </a>
           </div>
+          {% endif %}
+          
         </div>
 
         <p style="min-height: 10px"></p>
